# Technical_Analysis_GAI

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
source/: get_analysis.py  get_chart.py  get_news.py  get_ticker.py
